<resources>
    <string name="app_name">Dialer</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="dial">DIAL</string>
    <string name="call_list">CALL LIST</string>
    <string name="settings">SETTINGS</string>
    <string name="map">MAP</string>
    <string name="about">ABOUT</string>
    <string name="this_is_the_dial_activity">This is the dial activity.</string>
    <string name="this_is_a_list_of_calls">This is a list of calls.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="no_phone_number_stored">No telephone numbers are stored</string>

    <!-- Store numbers preferences -->
    <string name="store_key">"store_numbers"</string>
    <string name="store_numbers_title">"Store numbers"</string>
    <string name="store_numbers_summary_on">"Dialed telephone numbers are
        stored so they can be viewed later."</string>
    <string name="store_numbers_summary_off">"Dialed telephone numbers are not stored."</string>

    <!-- Delete numbers preferences -->
    <string name="delete_key">"remove_numbers"</string>
    <string name="delete_numbers_title">"Delete stored numbers"</string>
    <string name="delete_numbers_summary">"Delete stored numbers from storage."</string>

    <string name="title_activity_maps">MapsActivity</string>

    <!-- Voice settings preferences -->
    <string name="voice_key">"choose_voice"</string>
    <string name="voice_title">"Voices"</string>
    <string name="voice_summary">mamacita_us</string>

    <!-- About dialog -->
    <string name="about_title">About</string>
    <string name="about_dialog">This app is supposed to mimic the keypad
                on a phone. The app will consist of activities to:\n
                \n
                - Enter numbers to dial \n
                - See previously dialed numbers \n
                - Change the keypad settings \n
                - Show on a Map where previous calls are dialed from</string>
    <string name="ok_dialog">OK</string>
    <string name="already_seen">You have already seen the About-dialog</string>
    <string name="download_voices">DOWNLOAD VOICES</string>
    <string name="setting">Setting</string>
    <string name="download_voices_small">Download Voices</string>

    <!-- Phone call dialog -->
    <string name="call_title">Call Permission</string>
    <string name="call_description">This permission is required in order to make phone calls</string>
    <string name="cancel_dialog">Cancel</string>

    <!-- Dial-pads strings -->
    <string name="dialpad_0_title">0</string>
    <string name="dialpad_1_title">1</string>
    <string name="dialpad_2_title">2</string>
    <string name="dialpad_3_title">3</string>
    <string name="dialpad_4_title">4</string>
    <string name="dialpad_5_title">5</string>
    <string name="dialpad_6_title">6</string>
    <string name="dialpad_7_title">7</string>
    <string name="dialpad_8_title">8</string>
    <string name="dialpad_9_title">9</string>
    <string name="dialpad_star_title">*</string>
    <string name="dialpad_pound_title">#</string>

    <string name="dialpad_0_msg">+</string>
    <string name="dialpad_2_msg">ABC</string>
    <string name="dialpad_3_msg">DEF</string>
    <string name="dialpad_4_msg">GHI</string>
    <string name="dialpad_5_msg">JKL</string>
    <string name="dialpad_6_msg">MNO</string>
    <string name="dialpad_7_msg">PGRS</string>
    <string name="dialpad_8_msg">TUV</string>
    <string name="dialpad_9_msg">WXYZ</string>

    <!-- DOWNLOAD STRINGS -->

    <string name="url_web">https://dt031g.programvaruteknik.nu/dialer/voices/</string>
    <string name="new_dir">/data/user/0/se.miun.ebni2100.dt031g.dialer/files/voices/</string>
    <string name="_33">33%</string>

    <string name="request_download">Write External Storage permission allows us to save files. Please allow this " +
                        "permission in App Settings.</string>
    <string name="download_title">Downloading…</string>
    <string name="download_success">File downloaded.</string>
    <string name="download_fail">Download failed.</string>



</resources>