<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_would_you_like_to_do"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/dial_btn"
        app:layout_constraintEnd_toEndOf="@+id/settings_btn"
        app:layout_constraintStart_toStartOf="@+id/settings_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dial_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/dial"
        app:layout_constraintBottom_toTopOf="@+id/call_btn"
        app:layout_constraintStart_toStartOf="@+id/settings_btn"
        app:layout_constraintEnd_toEndOf="@+id/settings_btn"  />

    <Button
        android:id="@+id/call_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/call_list"
        app:layout_constraintBottom_toTopOf="@+id/settings_btn"
        app:layout_constraintStart_toStartOf="@+id/settings_btn"
        app:layout_constraintEnd_toEndOf="@+id/settings_btn"  />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/map_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/map"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn"
        app:layout_constraintStart_toStartOf="@+id/settings_btn"
        app:layout_constraintEnd_toEndOf="@+id/settings_btn" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        app:layout_constraintTop_toBottomOf="@+id/map_btn"
        app:layout_constraintStart_toStartOf="@+id/settings_btn"
        app:layout_constraintEnd_toEndOf="@+id/settings_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>